fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3834,7 +3834,7 @@
   position: relative;
   z-index: 2;
   float: left;
-  width: 200px;
+  width: 50%;
   line-height: 50px;
   font-size: 18px;
   color: rgba(255, 255, 255, 0.35);
@@ -3879,7 +3879,7 @@
 
 .switch-input:checked + .switch-label-on ~ .switch-selection {
   /* Note: left: 50% doesn't transition in WebKit */
-  left: 198px;
+  left: calc(50% - 2px);
 }
 
 .switch-selection {
